[gd_scene load_steps=11 format=3 uid="uid://kllfd8bau13m"]

[ext_resource type="Texture2D" uid="uid://c5aexloh8c87j" path="res://assets/models/notepad_icon.png" id="1_u41q4"]
[ext_resource type="Script" path="res://scripts/notes_app.gd" id="2_jrf2q"]
[ext_resource type="Texture2D" uid="uid://ru6gd8ro27ln" path="res://ui/exit_button.png" id="3_n104k"]
[ext_resource type="FontFile" uid="uid://clxqmevbasqw4" path="res://assets/VCR_OSD_MONO_1.001.ttf" id="4_tn7ac"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y2saw"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.544974, 0.544974, 0.544974, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fgpr7"]
bg_color = Color(0.105882, 0.105882, 0.105882, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 2
border_color = Color(0.545098, 0.545098, 0.545098, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mon3x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vxl7o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h8u8w"]

[sub_resource type="LabelSettings" id="LabelSettings_hopj7"]
font = ExtResource("4_tn7ac")
font_color = Color(0, 0, 0, 1)

[node name="Notes App" type="TextureRect"]
offset_left = 13.0
offset_top = 58.0
offset_right = 77.0
offset_bottom = 122.0
texture = ExtResource("1_u41q4")
script = ExtResource("2_jrf2q")

[node name="Notes" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 281.0
offset_top = 13.0
offset_right = 462.0
offset_bottom = 276.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Notes"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_y2saw")

[node name="Panel2" type="Panel" parent="Notes"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 20.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fgpr7")

[node name="Button" type="Button" parent="Notes"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -23.0
offset_top = -1.0
offset_bottom = 22.0
grow_horizontal = 0
theme_override_colors/icon_pressed_color = Color(0.564706, 0.564706, 0.564706, 1)
theme_override_colors/icon_hover_color = Color(0.666667, 0.666667, 0.666667, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_mon3x")
icon = ExtResource("3_n104k")
flat = true

[node name="TextEdit" type="TextEdit" parent="Notes"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = -105.5
offset_right = 85.5
offset_bottom = 125.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_constants/caret_width = 5
theme_override_fonts/font = ExtResource("4_tn7ac")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_vxl7o")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h8u8w")
context_menu_enabled = false
shortcut_keys_enabled = false
wrap_mode = 1
caret_blink = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 9.0
offset_top = 22.0
offset_right = 55.0
offset_bottom = 45.0
grow_vertical = 2
text = "Notes"
label_settings = SubResource("LabelSettings_hopj7")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Notes/Button" to="." method="_on_button_pressed"]
[connection signal="text_changed" from="Notes/TextEdit" to="." method="_on_text_edit_text_changed"]
